Deployment.yaml
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "tmpServiceName"
  namespace: "qa"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "tmpServiceName"
  template:
    metadata:
      labels:
        app: "tmpServiceName"
    spec:
      containers:
        - name: "tmpServiceName"
          image: "tmpServiceNameImage"
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: "/health"
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 30
