Service.yaml
apiVersion: "v1"
kind: "Service"
metadata:
  name: "tmpServiceName"
  namespace: "prod"
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "9090"
spec:
  type: "ClusterIP"
  ports:
    - port: 443
      targetPort: 3000
  selector:
    app: "tmpServiceName"
